inviting atendees by email
